--- a/alter/aurora.html
+++ b/alter/aurora.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="../favicon.png" />
+		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<style>
 			@font-face {
@@ -22,14 +22,14 @@
 			}
 		</style>
 		
-		<link href="../_app/immutable/assets/3.f4807458.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.7289c5c3.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/scheduler.e108d1fd.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.5b0deac9.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.4f0bc84d.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/index.a21d6cee.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.cc2a4f72.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/3.93d14ae8.js">
+		<link href="/_app/immutable/assets/3.f4807458.css" rel="stylesheet">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.3591d7e8.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.e108d1fd.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.33b00992.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.6223379a.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.a21d6cee.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/0.cc2a4f72.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/3.93d14ae8.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">  <a href="/" class="go-back svelte-1bztjmo" data-svelte-h="svelte-1x5b5lw"><p class="svelte-1bztjmo">⬅</p></a> <div class="container outer svelte-1bztjmo"><div class="container image svelte-1bztjmo"><span slot="image" data-svelte-h="svelte-1b0anxz"><img src="/aurora.jpg"></span></div> <div class="container info svelte-1bztjmo"><div class="container basic svelte-1bztjmo"><div class="fact svelte-1bztjmo" style="border-right: 4px solid white;"><span class="title svelte-1bztjmo" data-svelte-h="svelte-11lpxx1"><p class="svelte-1bztjmo">Name</p></span> <p style="width: 100%; text-align: center;"><span slot="name" data-svelte-h="svelte-l12sm0">Aurora</span></p></div> <div class="fact svelte-1bztjmo"><span class="title svelte-1bztjmo" data-svelte-h="svelte-1r6we22"><p class="svelte-1bztjmo">Role</p></span> <p style="width: 100%; text-align: center;"><span slot="role" data-svelte-h="svelte-9h1s9u">Caretaker, Sexual Alter/Protector</span></p></div></div> <div class="container basic-two svelte-1bztjmo"><div class="fact svelte-1bztjmo" style="border-right: 4px solid white;"><span class="title svelte-1bztjmo" data-svelte-h="svelte-1b83z5l"><p class="svelte-1bztjmo">Age</p></span> <p style="width: 100%; text-align: center;"><span slot="age">21</span></p></div> <div class="fact svelte-1bztjmo" style="border-right: 4px solid white;"><span class="title svelte-1bztjmo" data-svelte-h="svelte-lhrs6b"><p class="svelte-1bztjmo">Gender</p></span> <p style="width: 100%; text-align: center;"><span slot="gender" data-svelte-h="svelte-91g6fk">Woman</span></p></div> <div class="fact svelte-1bztjmo"><span class="title svelte-1bztjmo" data-svelte-h="svelte-32b5g2"><p class="svelte-1bztjmo">Sexuality</p></span> <p style="width: 100%; text-align: center;"><span slot="sexuality" data-svelte-h="svelte-svhbpk">Pansexual</span></p></div></div> <div class="container basic-two svelte-1bztjmo"><div class="fact svelte-1bztjmo" style="border-right: 4px solid white;"><span class="title svelte-1bztjmo" data-svelte-h="svelte-1b7js59"><p class="svelte-1bztjmo">Color</p></span> <span slot="color" data-svelte-h="svelte-13uuum5"><div class="color" style="background-color: #FF5B00"></div></span></div> <div class="fact svelte-1bztjmo" style="border-right: 4px solid white;"><span class="title svelte-1bztjmo" data-svelte-h="svelte-rwh243"><p class="svelte-1bztjmo">Song</p></span> <p style="width: 100%; text-align: center;"><span slot="song" data-svelte-h="svelte-d0j0bq">In The Night - The Weeknd</span></p></div> <div class="fact svelte-1bztjmo"><span class="title svelte-1bztjmo" data-svelte-h="svelte-sytfha"><p class="svelte-1bztjmo">Food</p></span> <p style="width: 100%; text-align: center;"><span slot="food" data-svelte-h="svelte-dry0am">Hummus</span></p></div></div> <div class="description svelte-1bztjmo"><p class="description-title svelte-1bztjmo" data-svelte-h="svelte-1ffp0ht">About Me</p> <p class="explain svelte-1bztjmo"><span slot="description" data-svelte-h="svelte-1klez2x">Hi it is I~~ Aurora 🧡! I love life, the universe, and everything to a fault 😂! I am soft spoken and like to imagine myself as smaller than the body. 
@@ -40,8 +40,8 @@
 			
 			<script>
 				{
-					__sveltekit_1b0qwie = {
-						base: new URL("..", location).pathname.slice(0, -1),
+					__sveltekit_1ngiik0 = {
+						base: "",
 						env: {}
 					};
 
@@ -50,8 +50,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.7289c5c3.js"),
-						import("../_app/immutable/entry/app.4f0bc84d.js")
+						import("/_app/immutable/entry/start.3591d7e8.js"),
+						import("/_app/immutable/entry/app.6223379a.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
