--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="./favicon.png" />
+		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<style>
 			@font-face {
@@ -22,22 +22,22 @@
 			}
 		</style>
 		
-		<link href="./_app/immutable/assets/2.09dd8c8d.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.7289c5c3.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.e108d1fd.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.5b0deac9.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.4f0bc84d.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.a21d6cee.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.cc2a4f72.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.91d7a4d2.js">
+		<link href="/_app/immutable/assets/2.09dd8c8d.css" rel="stylesheet">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.3591d7e8.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.e108d1fd.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.33b00992.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.6223379a.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.a21d6cee.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/0.cc2a4f72.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/2.91d7a4d2.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">  <div class="outer container svelte-i1yqa2" data-svelte-h="svelte-zsyszg"><div class="inner container svelte-i1yqa2"><div class="planetary-body svelte-i1yqa2" style="background-color: white; width: 300px; min-height: 300px;"><p style="font-size: 5em">Sol</p></div> <div class="planetary-body svelte-i1yqa2" style="background-color: grey; width: 175px; min-height: 175px; filter: blur(20px)"><p style="font-size: 2em">Dominic</p></div> <div class="planetary-body svelte-i1yqa2" style="background-color: yellow; width: 75px; min-height: 75px; transform: translate(60px, -30px); filter: blur(20px)"><p style="font-size: 1em">Colby</p></div> <div class="planetary-body svelte-i1yqa2" style="background-color: red; width: 175px; min-height: 175px; filter: blur(20px)"><p style="font-size: 2em">Audrey</p></div> <div class="planetary-body svelte-i1yqa2" style="background-color: pink; width: 75px; min-height: 75px; transform: translate(-60px, -30px); filter: blur(20px)"><p style="font-size: 1em">Trinity</p></div> <div class="planetary-body svelte-i1yqa2" style="background-color: green; width: 175px; min-height: 175px; filter: blur(20px)"><p style="font-size: 2em">Amp</p></div> <a class="planetary-body svelte-i1yqa2" href="/alter/aurora" style="background-color: #FF5B00; width: 175px; min-height: 175px;"><p style="font-size: 2em">Aurora</p></a> <p style="font-size: 1.0em; color:white; font-family: lemonmilk;">more alter info coming soon...</p></div></div> 
 			
 			<script>
 				{
-					__sveltekit_1b0qwie = {
-						base: new URL(".", location).pathname.slice(0, -1),
+					__sveltekit_1ngiik0 = {
+						base: "",
 						env: {}
 					};
 
@@ -46,8 +46,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.7289c5c3.js"),
-						import("./_app/immutable/entry/app.4f0bc84d.js")
+						import("/_app/immutable/entry/start.3591d7e8.js"),
+						import("/_app/immutable/entry/app.6223379a.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
