--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 		</style>
 		
 		<link href="/_app/immutable/assets/2.09dd8c8d.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.3591d7e8.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.fa1711df.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.e108d1fd.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.33b00992.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.6223379a.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.913a331f.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.08462a66.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.a21d6cee.js">
 		<link rel="modulepreload" href="/_app/immutable/nodes/0.cc2a4f72.js">
 		<link rel="modulepreload" href="/_app/immutable/nodes/2.91d7a4d2.js">
@@ -36,7 +36,7 @@
 			
 			<script>
 				{
-					__sveltekit_1ngiik0 = {
+					__sveltekit_zmgr23 = {
 						base: "",
 						env: {}
 					};
@@ -46,8 +46,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("/_app/immutable/entry/start.3591d7e8.js"),
-						import("/_app/immutable/entry/app.6223379a.js")
+						import("/_app/immutable/entry/start.fa1711df.js"),
+						import("/_app/immutable/entry/app.08462a66.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
