--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 		</style>
 		
 		<link href="/_app/immutable/assets/2.09dd8c8d.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.26b7dfe5.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.71550ce3.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.e108d1fd.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.c2d353c9.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.507e81a7.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.d9dc4171.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.5efa4d68.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.a21d6cee.js">
 		<link rel="modulepreload" href="/_app/immutable/nodes/0.cc2a4f72.js">
 		<link rel="modulepreload" href="/_app/immutable/nodes/2.91d7a4d2.js">
@@ -36,7 +36,7 @@
 			
 			<script>
 				{
-					__sveltekit_gxgr8a = {
+					__sveltekit_1qcefbk = {
 						base: "",
 						env: {}
 					};
@@ -46,8 +46,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("/_app/immutable/entry/start.26b7dfe5.js"),
-						import("/_app/immutable/entry/app.507e81a7.js")
+						import("/_app/immutable/entry/start.71550ce3.js"),
+						import("/_app/immutable/entry/app.5efa4d68.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
