--- a/alter/aurora.html
+++ b/alter/aurora.html
@@ -23,10 +23,10 @@
 		</style>
 		
 		<link href="/_app/immutable/assets/3.f4807458.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.71550ce3.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.2ecbe38a.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.e108d1fd.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.d9dc4171.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.5efa4d68.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.45a22bcd.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.b58bf6bf.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.a21d6cee.js">
 		<link rel="modulepreload" href="/_app/immutable/nodes/0.cc2a4f72.js">
 		<link rel="modulepreload" href="/_app/immutable/nodes/3.93d14ae8.js">
@@ -40,7 +40,7 @@
 			
 			<script>
 				{
-					__sveltekit_1qcefbk = {
+					__sveltekit_1uio44 = {
 						base: "",
 						env: {}
 					};
@@ -50,8 +50,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("/_app/immutable/entry/start.71550ce3.js"),
-						import("/_app/immutable/entry/app.5efa4d68.js")
+						import("/_app/immutable/entry/start.2ecbe38a.js"),
+						import("/_app/immutable/entry/app.b58bf6bf.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
