--- a/alter/aurora.html
+++ b/alter/aurora.html
@@ -22,17 +22,17 @@
 			}
 		</style>
 		
-		<link href="/_app/immutable/assets/3.f4807458.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.2ecbe38a.js">
+		<link href="/_app/immutable/assets/3.d16c8934.css" rel="stylesheet">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.436f3a59.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.e108d1fd.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.45a22bcd.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.b58bf6bf.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.35e0d00c.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.92e455b7.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.a21d6cee.js">
 		<link rel="modulepreload" href="/_app/immutable/nodes/0.cc2a4f72.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/3.93d14ae8.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/3.b9bcbb3d.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">  <a href="/" class="go-back svelte-1bztjmo" data-svelte-h="svelte-1x5b5lw"><p class="svelte-1bztjmo">⬅</p></a> <div class="container outer svelte-1bztjmo"><div class="container image svelte-1bztjmo"><span slot="image" data-svelte-h="svelte-1b0anxz"><img src="/aurora.jpg"></span></div> <div class="container info svelte-1bztjmo"><div class="container basic svelte-1bztjmo"><div class="fact svelte-1bztjmo" style="border-right: 4px solid white;"><span class="title svelte-1bztjmo" data-svelte-h="svelte-11lpxx1"><p class="svelte-1bztjmo">Name</p></span> <p style="width: 100%; text-align: center;"><span slot="name" data-svelte-h="svelte-l12sm0">Aurora</span></p></div> <div class="fact svelte-1bztjmo"><span class="title svelte-1bztjmo" data-svelte-h="svelte-1r6we22"><p class="svelte-1bztjmo">Role</p></span> <p style="width: 100%; text-align: center;"><span slot="role" data-svelte-h="svelte-9h1s9u">Caretaker, Sexual Alter/Protector</span></p></div></div> <div class="container basic-two svelte-1bztjmo"><div class="fact svelte-1bztjmo" style="border-right: 4px solid white;"><span class="title svelte-1bztjmo" data-svelte-h="svelte-1b83z5l"><p class="svelte-1bztjmo">Age</p></span> <p style="width: 100%; text-align: center;"><span slot="age">21</span></p></div> <div class="fact svelte-1bztjmo" style="border-right: 4px solid white;"><span class="title svelte-1bztjmo" data-svelte-h="svelte-lhrs6b"><p class="svelte-1bztjmo">Gender</p></span> <p style="width: 100%; text-align: center;"><span slot="gender" data-svelte-h="svelte-91g6fk">Woman</span></p></div> <div class="fact svelte-1bztjmo"><span class="title svelte-1bztjmo" data-svelte-h="svelte-32b5g2"><p class="svelte-1bztjmo">Sexuality</p></span> <p style="width: 100%; text-align: center;"><span slot="sexuality" data-svelte-h="svelte-svhbpk">Pansexual</span></p></div></div> <div class="container basic-two svelte-1bztjmo"><div class="fact svelte-1bztjmo" style="border-right: 4px solid white;"><span class="title svelte-1bztjmo" data-svelte-h="svelte-1b7js59"><p class="svelte-1bztjmo">Color</p></span> <span slot="color" data-svelte-h="svelte-13uuum5"><div class="color" style="background-color: #FF5B00"></div></span></div> <div class="fact svelte-1bztjmo" style="border-right: 4px solid white;"><span class="title svelte-1bztjmo" data-svelte-h="svelte-rwh243"><p class="svelte-1bztjmo">Song</p></span> <p style="width: 100%; text-align: center;"><span slot="song" data-svelte-h="svelte-d0j0bq">In The Night - The Weeknd</span></p></div> <div class="fact svelte-1bztjmo"><span class="title svelte-1bztjmo" data-svelte-h="svelte-sytfha"><p class="svelte-1bztjmo">Food</p></span> <p style="width: 100%; text-align: center;"><span slot="food" data-svelte-h="svelte-dry0am">Hummus</span></p></div></div> <div class="description svelte-1bztjmo"><p class="description-title svelte-1bztjmo" data-svelte-h="svelte-1ffp0ht">About Me</p> <p class="explain svelte-1bztjmo"><span slot="description" data-svelte-h="svelte-1klez2x">Hi it is I~~ Aurora 🧡! I love life, the universe, and everything to a fault 😂! I am soft spoken and like to imagine myself as smaller than the body. 
+		<div style="display: contents">  <a href="/" class="go-back svelte-11h11cc" data-svelte-h="svelte-1x5b5lw"><p class="svelte-11h11cc">⬅</p></a> <div class="container outer svelte-11h11cc"><div class="container image svelte-11h11cc"><span slot="image" data-svelte-h="svelte-1b0anxz"><img src="/aurora.jpg"></span></div> <div class="container info svelte-11h11cc"><div class="container basic svelte-11h11cc"><div class="fact svelte-11h11cc" style="border-right: 4px solid white;"><span class="title svelte-11h11cc" data-svelte-h="svelte-11lpxx1"><p class="svelte-11h11cc">Name</p></span> <p style="width: 100%; text-align: center;"><span slot="name" data-svelte-h="svelte-l12sm0">Aurora</span></p></div> <div class="fact svelte-11h11cc"><span class="title svelte-11h11cc" data-svelte-h="svelte-1r6we22"><p class="svelte-11h11cc">Role</p></span> <p style="width: 100%; text-align: center;"><span slot="role" data-svelte-h="svelte-9h1s9u">Caretaker, Sexual Alter/Protector</span></p></div></div> <div class="container basic-two svelte-11h11cc"><div class="fact svelte-11h11cc" style="border-right: 4px solid white;"><span class="title svelte-11h11cc" data-svelte-h="svelte-1b83z5l"><p class="svelte-11h11cc">Age</p></span> <p style="width: 100%; text-align: center;"><span slot="age">21</span></p></div> <div class="fact svelte-11h11cc" style="border-right: 4px solid white;"><span class="title svelte-11h11cc" data-svelte-h="svelte-lhrs6b"><p class="svelte-11h11cc">Gender</p></span> <p style="width: 100%; text-align: center;"><span slot="gender" data-svelte-h="svelte-91g6fk">Woman</span></p></div> <div class="fact svelte-11h11cc"><span class="title svelte-11h11cc" data-svelte-h="svelte-32b5g2"><p class="svelte-11h11cc">Sexuality</p></span> <p style="width: 100%; text-align: center;"><span slot="sexuality" data-svelte-h="svelte-svhbpk">Pansexual</span></p></div></div> <div class="container basic-two svelte-11h11cc"><div class="fact svelte-11h11cc" style="border-right: 4px solid white;"><span class="title svelte-11h11cc" data-svelte-h="svelte-1b7js59"><p class="svelte-11h11cc">Color</p></span> <span slot="color" data-svelte-h="svelte-13uuum5"><div class="color" style="background-color: #FF5B00"></div></span></div> <div class="fact svelte-11h11cc" style="border-right: 4px solid white;"><span class="title svelte-11h11cc" data-svelte-h="svelte-rwh243"><p class="svelte-11h11cc">Song</p></span> <p style="width: 100%; text-align: center;"><span slot="song" data-svelte-h="svelte-d0j0bq">In The Night - The Weeknd</span></p></div> <div class="fact svelte-11h11cc"><span class="title svelte-11h11cc" data-svelte-h="svelte-sytfha"><p class="svelte-11h11cc">Food</p></span> <p style="width: 100%; text-align: center;"><span slot="food" data-svelte-h="svelte-dry0am">Hummus</span></p></div></div> <div class="description svelte-11h11cc"><p class="description-title svelte-11h11cc" data-svelte-h="svelte-1ffp0ht">About Me</p> <p class="explain svelte-11h11cc"><span slot="description" data-svelte-h="svelte-1klez2x">Hi it is I~~ Aurora 🧡! I love life, the universe, and everything to a fault 😂! I am soft spoken and like to imagine myself as smaller than the body. 
         I like to dance, sing. I thrive when my environment is tidy and my body is clean. I love to cook and eat; hopefully all that hummus goes to my hips! 
         <br> <br>
         I don&#39;t front often, and when I do, Amp usually fronts with me. I don&#39;t have much contact with the other alters in the system, besides the elusive numbered alters
@@ -40,7 +40,7 @@
 			
 			<script>
 				{
-					__sveltekit_1uio44 = {
+					__sveltekit_1brgc1d = {
 						base: "",
 						env: {}
 					};
@@ -50,8 +50,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("/_app/immutable/entry/start.2ecbe38a.js"),
-						import("/_app/immutable/entry/app.b58bf6bf.js")
+						import("/_app/immutable/entry/start.436f3a59.js"),
+						import("/_app/immutable/entry/app.92e455b7.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
