--- a/alter/aurora.html
+++ b/alter/aurora.html
@@ -22,14 +22,16 @@
 			}
 		</style>
 		
-		<link href="/_app/immutable/assets/3.d16c8934.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.436f3a59.js">
+		<link href="/_app/immutable/assets/Alter.d16c8934.css" rel="stylesheet">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.8c2edb4f.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.e108d1fd.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.35e0d00c.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.92e455b7.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.4d28543b.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.92e4cad9.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.a21d6cee.js">
 		<link rel="modulepreload" href="/_app/immutable/nodes/0.cc2a4f72.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/3.b9bcbb3d.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/6.9cf87a7a.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/Alter.57612342.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/common.d6240f3d.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">  <a href="/" class="go-back svelte-11h11cc" data-svelte-h="svelte-1x5b5lw"><p class="svelte-11h11cc">⬅</p></a> <div class="container outer svelte-11h11cc"><div class="container image svelte-11h11cc"><span slot="image" data-svelte-h="svelte-1b0anxz"><img src="/aurora.jpg"></span></div> <div class="container info svelte-11h11cc"><div class="container basic svelte-11h11cc"><div class="fact svelte-11h11cc" style="border-right: 4px solid white;"><span class="title svelte-11h11cc" data-svelte-h="svelte-11lpxx1"><p class="svelte-11h11cc">Name</p></span> <p style="width: 100%; text-align: center;"><span slot="name" data-svelte-h="svelte-l12sm0">Aurora</span></p></div> <div class="fact svelte-11h11cc"><span class="title svelte-11h11cc" data-svelte-h="svelte-1r6we22"><p class="svelte-11h11cc">Role</p></span> <p style="width: 100%; text-align: center;"><span slot="role" data-svelte-h="svelte-9h1s9u">Caretaker, Sexual Alter/Protector</span></p></div></div> <div class="container basic-two svelte-11h11cc"><div class="fact svelte-11h11cc" style="border-right: 4px solid white;"><span class="title svelte-11h11cc" data-svelte-h="svelte-1b83z5l"><p class="svelte-11h11cc">Age</p></span> <p style="width: 100%; text-align: center;"><span slot="age">21</span></p></div> <div class="fact svelte-11h11cc" style="border-right: 4px solid white;"><span class="title svelte-11h11cc" data-svelte-h="svelte-lhrs6b"><p class="svelte-11h11cc">Gender</p></span> <p style="width: 100%; text-align: center;"><span slot="gender" data-svelte-h="svelte-91g6fk">Woman</span></p></div> <div class="fact svelte-11h11cc"><span class="title svelte-11h11cc" data-svelte-h="svelte-32b5g2"><p class="svelte-11h11cc">Sexuality</p></span> <p style="width: 100%; text-align: center;"><span slot="sexuality" data-svelte-h="svelte-svhbpk">Pansexual</span></p></div></div> <div class="container basic-two svelte-11h11cc"><div class="fact svelte-11h11cc" style="border-right: 4px solid white;"><span class="title svelte-11h11cc" data-svelte-h="svelte-1b7js59"><p class="svelte-11h11cc">Color</p></span> <span slot="color" data-svelte-h="svelte-13uuum5"><div class="color" style="background-color: #FF5B00"></div></span></div> <div class="fact svelte-11h11cc" style="border-right: 4px solid white;"><span class="title svelte-11h11cc" data-svelte-h="svelte-rwh243"><p class="svelte-11h11cc">Song</p></span> <p style="width: 100%; text-align: center;"><span slot="song" data-svelte-h="svelte-d0j0bq">In The Night - The Weeknd</span></p></div> <div class="fact svelte-11h11cc"><span class="title svelte-11h11cc" data-svelte-h="svelte-sytfha"><p class="svelte-11h11cc">Food</p></span> <p style="width: 100%; text-align: center;"><span slot="food" data-svelte-h="svelte-dry0am">Hummus</span></p></div></div> <div class="description svelte-11h11cc"><p class="description-title svelte-11h11cc" data-svelte-h="svelte-1ffp0ht">About Me</p> <p class="explain svelte-11h11cc"><span slot="description" data-svelte-h="svelte-1klez2x">Hi it is I~~ Aurora 🧡! I love life, the universe, and everything to a fault 😂! I am soft spoken and like to imagine myself as smaller than the body. 
@@ -40,7 +42,7 @@
 			
 			<script>
 				{
-					__sveltekit_1brgc1d = {
+					__sveltekit_6k3apn = {
 						base: "",
 						env: {}
 					};
@@ -50,11 +52,11 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("/_app/immutable/entry/start.436f3a59.js"),
-						import("/_app/immutable/entry/app.92e455b7.js")
+						import("/_app/immutable/entry/start.8c2edb4f.js"),
+						import("/_app/immutable/entry/app.92e4cad9.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
-							node_ids: [0, 3],
+							node_ids: [0, 6],
 							data,
 							form: null,
 							error: null
