--- a/index.html
+++ b/index.html
@@ -23,20 +23,20 @@
 		</style>
 		
 		<link href="/_app/immutable/assets/2.09dd8c8d.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.436f3a59.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.8c2edb4f.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.e108d1fd.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.35e0d00c.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.92e455b7.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.4d28543b.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.92e4cad9.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.a21d6cee.js">
 		<link rel="modulepreload" href="/_app/immutable/nodes/0.cc2a4f72.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/2.91d7a4d2.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/2.add0d290.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">  <div class="outer container svelte-i1yqa2" data-svelte-h="svelte-zsyszg"><div class="inner container svelte-i1yqa2"><div class="planetary-body svelte-i1yqa2" style="background-color: white; width: 300px; min-height: 300px;"><p style="font-size: 5em">Sol</p></div> <div class="planetary-body svelte-i1yqa2" style="background-color: grey; width: 175px; min-height: 175px; filter: blur(20px)"><p style="font-size: 2em">Dominic</p></div> <div class="planetary-body svelte-i1yqa2" style="background-color: yellow; width: 75px; min-height: 75px; transform: translate(60px, -30px); filter: blur(20px)"><p style="font-size: 1em">Colby</p></div> <div class="planetary-body svelte-i1yqa2" style="background-color: red; width: 175px; min-height: 175px; filter: blur(20px)"><p style="font-size: 2em">Audrey</p></div> <div class="planetary-body svelte-i1yqa2" style="background-color: pink; width: 75px; min-height: 75px; transform: translate(-60px, -30px); filter: blur(20px)"><p style="font-size: 1em">Trinity</p></div> <div class="planetary-body svelte-i1yqa2" style="background-color: green; width: 175px; min-height: 175px; filter: blur(20px)"><p style="font-size: 2em">Amp</p></div> <a class="planetary-body svelte-i1yqa2" href="/alter/aurora" style="background-color: #FF5B00; width: 175px; min-height: 175px;"><p style="font-size: 2em">Aurora</p></a> <p style="font-size: 1.0em; color:white; font-family: lemonmilk;">more alter info coming soon...</p></div></div> 
+		<div style="display: contents">  <div class="outer container svelte-i1yqa2" data-svelte-h="svelte-uy4ipl"><div class="inner container svelte-i1yqa2"><div class="planetary-body svelte-i1yqa2" style="background-color: white; width: 300px; min-height: 300px;"><p style="font-size: 5em">Sol</p></div> <a class="planetary-body svelte-i1yqa2" href="alter/dominic" style="background-color: grey; width: 175px; min-height: 175px;"><p style="font-size: 2em">Dominic</p></a> <a class="planetary-body svelte-i1yqa2" href="alter/colby" style="background-color: yellow; width: 75px; min-height: 75px; transform: translate(60px, -30px);"><p style="font-size: 1em">Colby</p></a> <a class="planetary-body svelte-i1yqa2" href="alter/audrey" style="background-color: red; width: 175px; min-height: 175px;"><p style="font-size: 2em">Audrey</p></a> <a class="planetary-body svelte-i1yqa2" href="alter/trinity" style="background-color: pink; width: 75px; min-height: 75px; transform: translate(-60px, -30px);"><p style="font-size: 1em">Trinity</p></a> <a class="planetary-body svelte-i1yqa2" href="alter/amp" style="background-color: green; width: 175px; min-height: 175px;"><p style="font-size: 2em">Amp</p></a> <a class="planetary-body svelte-i1yqa2" href="/alter/aurora" style="background-color: #FF5B00; width: 175px; min-height: 175px;"><p style="font-size: 2em">Aurora</p></a> <a class="planetary-body svelte-i1yqa2" href="/alter/abyss" style="background-color: black; border: 4px solid white; width: 175px; min-height: 175px;"><p style="color: white; font-size: 2em">Abyss</p></a> <a class="planetary-body svelte-i1yqa2" href="/alter/two" style="background-color: black; border: 4px solid white; width: 175px; min-height: 175px;"><p style="color: white; font-size: 2em">2</p></a> <a class="planetary-body svelte-i1yqa2" href="/alter/six" style="background-color: black; border: 4px solid white; width: 175px; min-height: 175px;"><p style="color: white; font-size: 2em">6</p></a> <a class="planetary-body svelte-i1yqa2" href="/alter/seventeen" style="background-color: black; border: 4px solid white; width: 175px; min-height: 175px;"><p style="color: white; font-size: 2em">17</p></a> <a class="planetary-body svelte-i1yqa2" href="/alter/one-eleven" style="background-color: black; border: 4px solid white; width: 175px; min-height: 175px;"><p style="color: white; font-size: 2em">111</p></a> <p style="font-size: 1.0em; color:white; font-family: lemonmilk;">more alter info coming soon...</p> <br> <p style="font-size: 1.0em; color:white; font-family: lemonmilk;">We find out more about the system everyday, so information is subject to drastic change.</p></div></div> 
 			
 			<script>
 				{
-					__sveltekit_1brgc1d = {
+					__sveltekit_6k3apn = {
 						base: "",
 						env: {}
 					};
@@ -46,8 +46,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("/_app/immutable/entry/start.436f3a59.js"),
-						import("/_app/immutable/entry/app.92e455b7.js")
+						import("/_app/immutable/entry/start.8c2edb4f.js"),
+						import("/_app/immutable/entry/app.92e4cad9.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
