--- a/alter/colby.html
+++ b/alter/colby.html
@@ -22,22 +22,22 @@
 			}
 		</style>
 		
-		<link href="/_app/immutable/assets/Alter.d16c8934.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.8c2edb4f.js">
+		<link href="/_app/immutable/assets/Alter.2f756ac9.css" rel="stylesheet">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.269d6dc9.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.e108d1fd.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.4d28543b.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.92e4cad9.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.496f2156.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.917926fb.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.a21d6cee.js">
 		<link rel="modulepreload" href="/_app/immutable/nodes/0.cc2a4f72.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/7.26fc7c9d.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/Alter.57612342.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/7.fa47e416.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/Alter.9a1a6ac3.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">  <a href="/" class="go-back svelte-11h11cc" data-svelte-h="svelte-1x5b5lw"><p class="svelte-11h11cc">⬅</p></a> <div class="container outer svelte-11h11cc"><div class="container image svelte-11h11cc"><span slot="image"></span></div> <div class="container info svelte-11h11cc"><div class="container basic svelte-11h11cc"><div class="fact svelte-11h11cc" style="border-right: 4px solid white;"><span class="title svelte-11h11cc" data-svelte-h="svelte-11lpxx1"><p class="svelte-11h11cc">Name</p></span> <p style="width: 100%; text-align: center;"><span slot="name" data-svelte-h="svelte-o2cmrp">Colby</span></p></div> <div class="fact svelte-11h11cc"><span class="title svelte-11h11cc" data-svelte-h="svelte-1r6we22"><p class="svelte-11h11cc">Role</p></span> <p style="width: 100%; text-align: center;"><span slot="role" data-svelte-h="svelte-1kqvisz">Core?, Little, Trauma Holder</span></p></div></div> <div class="container basic-two svelte-11h11cc"><div class="fact svelte-11h11cc" style="border-right: 4px solid white;"><span class="title svelte-11h11cc" data-svelte-h="svelte-1b83z5l"><p class="svelte-11h11cc">Age</p></span> <p style="width: 100%; text-align: center;"><span slot="age" data-svelte-h="svelte-6yc8dt">10</span></p></div> <div class="fact svelte-11h11cc" style="border-right: 4px solid white;"><span class="title svelte-11h11cc" data-svelte-h="svelte-lhrs6b"><p class="svelte-11h11cc">Gender</p></span> <p style="width: 100%; text-align: center;"><span slot="gender" data-svelte-h="svelte-1xvcx6k">Boy</span></p></div> <div class="fact svelte-11h11cc"><span class="title svelte-11h11cc" data-svelte-h="svelte-32b5g2"><p class="svelte-11h11cc">Sexuality</p></span> <p style="width: 100%; text-align: center;"><span slot="sexuality" data-svelte-h="svelte-mqhpqw">Nonsexual</span></p></div></div> <div class="container basic-two svelte-11h11cc"><div class="fact svelte-11h11cc" style="border-right: 4px solid white;"><span class="title svelte-11h11cc" data-svelte-h="svelte-1b7js59"><p class="svelte-11h11cc">Color</p></span> <span slot="color" data-svelte-h="svelte-forio3"><div class="color" style="background-color: yellow"></div></span></div> <div class="fact svelte-11h11cc" style="border-right: 4px solid white;"><span class="title svelte-11h11cc" data-svelte-h="svelte-rwh243"><p class="svelte-11h11cc">Song</p></span> <p style="width: 100%; text-align: center;"><span slot="song" data-svelte-h="svelte-tmfebv">-</span></p></div> <div class="fact svelte-11h11cc"><span class="title svelte-11h11cc" data-svelte-h="svelte-sytfha"><p class="svelte-11h11cc">Food</p></span> <p style="width: 100%; text-align: center;"><span slot="food" data-svelte-h="svelte-37tl31">Chicago-style Pizza</span></p></div></div> <div class="description svelte-11h11cc"><p class="description-title svelte-11h11cc" data-svelte-h="svelte-1ffp0ht">About Me</p> <p class="explain svelte-11h11cc"><span slot="description" data-svelte-h="svelte-14lvhh0">TODO when Colby fronts</span></p></div></div> </div> 
+		<div style="display: contents">  <a href="/" class="go-back svelte-zsvi39" data-svelte-h="svelte-1x5b5lw"><p class="svelte-zsvi39">⬅</p></a> <div class="container outer svelte-zsvi39"><div class="container image svelte-zsvi39"><span slot="image"></span></div> <div class="container info svelte-zsvi39"><div class="container basic svelte-zsvi39"><div class="fact svelte-zsvi39" style="border-right: 4px solid white;"><span class="title svelte-zsvi39" data-svelte-h="svelte-11lpxx1"><p class="svelte-zsvi39">Name</p></span> <p style="width: 100%; text-align: center;"><span slot="name" data-svelte-h="svelte-o2cmrp">Colby</span></p></div> <div class="fact svelte-zsvi39"><span class="title svelte-zsvi39" data-svelte-h="svelte-1r6we22"><p class="svelte-zsvi39">Role</p></span> <p style="width: 100%; text-align: center;"><span slot="role" data-svelte-h="svelte-1kqvisz">Core?, Little, Trauma Holder</span></p></div></div> <div class="container basic-two svelte-zsvi39"><div class="fact svelte-zsvi39" style="border-right: 4px solid white;"><span class="title svelte-zsvi39" data-svelte-h="svelte-1b83z5l"><p class="svelte-zsvi39">Age</p></span> <p style="width: 100%; text-align: center;"><span slot="age" data-svelte-h="svelte-6yc8dt">10</span></p></div> <div class="fact svelte-zsvi39" style="border-right: 4px solid white;"><span class="title svelte-zsvi39" data-svelte-h="svelte-lhrs6b"><p class="svelte-zsvi39">Gender</p></span> <p style="width: 100%; text-align: center;"><span slot="gender" data-svelte-h="svelte-1xvcx6k">Boy</span></p></div> <div class="fact svelte-zsvi39"><span class="title svelte-zsvi39" data-svelte-h="svelte-32b5g2"><p class="svelte-zsvi39">Sexuality</p></span> <p style="width: 100%; text-align: center;"><span slot="sexuality" data-svelte-h="svelte-mqhpqw">Nonsexual</span></p></div></div> <div class="container basic-two svelte-zsvi39"><div class="fact svelte-zsvi39" style="border-right: 4px solid white;"><span class="title svelte-zsvi39" data-svelte-h="svelte-1b7js59"><p class="svelte-zsvi39">Color</p></span> <span slot="color" data-svelte-h="svelte-forio3"><div class="color" style="background-color: yellow"></div></span></div> <div class="fact svelte-zsvi39" style="border-right: 4px solid white;"><span class="title svelte-zsvi39" data-svelte-h="svelte-rwh243"><p class="svelte-zsvi39">Song</p></span> <p style="width: 100%; text-align: center;"><span slot="song" data-svelte-h="svelte-tmfebv">-</span></p></div> <div class="fact svelte-zsvi39"><span class="title svelte-zsvi39" data-svelte-h="svelte-sytfha"><p class="svelte-zsvi39">Food</p></span> <p style="width: 100%; text-align: center;"><span slot="food" data-svelte-h="svelte-37tl31">Chicago-style Pizza</span></p></div></div> <div class="description svelte-zsvi39"><p class="description-title svelte-zsvi39" data-svelte-h="svelte-1ffp0ht">About Me</p> <p class="explain svelte-zsvi39"><span slot="description" data-svelte-h="svelte-14lvhh0">TODO when Colby fronts</span></p></div></div> </div> 
 			
 			<script>
 				{
-					__sveltekit_6k3apn = {
+					__sveltekit_5in08n = {
 						base: "",
 						env: {}
 					};
@@ -47,8 +47,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("/_app/immutable/entry/start.8c2edb4f.js"),
-						import("/_app/immutable/entry/app.92e4cad9.js")
+						import("/_app/immutable/entry/start.269d6dc9.js"),
+						import("/_app/immutable/entry/app.917926fb.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 7],
