--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 		</style>
 		
 		<link href="/_app/immutable/assets/2.09dd8c8d.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.8c2edb4f.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.269d6dc9.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.e108d1fd.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.4d28543b.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.92e4cad9.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.496f2156.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.917926fb.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.a21d6cee.js">
 		<link rel="modulepreload" href="/_app/immutable/nodes/0.cc2a4f72.js">
 		<link rel="modulepreload" href="/_app/immutable/nodes/2.add0d290.js">
@@ -36,7 +36,7 @@
 			
 			<script>
 				{
-					__sveltekit_6k3apn = {
+					__sveltekit_5in08n = {
 						base: "",
 						env: {}
 					};
@@ -46,8 +46,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("/_app/immutable/entry/start.8c2edb4f.js"),
-						import("/_app/immutable/entry/app.92e4cad9.js")
+						import("/_app/immutable/entry/start.269d6dc9.js"),
+						import("/_app/immutable/entry/app.917926fb.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
