--- a/alter/amp.html
+++ b/alter/amp.html
@@ -22,26 +22,26 @@
 			}
 		</style>
 		
-		<link href="/_app/immutable/assets/Alter.2f756ac9.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.269d6dc9.js">
+		<link href="/_app/immutable/assets/Alter.9c5a708c.css" rel="stylesheet">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.5b449d44.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.e108d1fd.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.496f2156.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.917926fb.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.ebe0c3d4.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.185df82c.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.a21d6cee.js">
 		<link rel="modulepreload" href="/_app/immutable/nodes/0.cc2a4f72.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/4.e84337c8.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/Alter.9a1a6ac3.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/4.23d034d8.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/Alter.d07ff5cc.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/common.d6240f3d.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">  <a href="/" class="go-back svelte-zsvi39" data-svelte-h="svelte-1x5b5lw"><p class="svelte-zsvi39">⬅</p></a> <div class="container outer svelte-zsvi39"><div class="container image svelte-zsvi39"><span slot="image" data-svelte-h="svelte-1kofsoh"><img src="/amp.jpg"></span></div> <div class="container info svelte-zsvi39"><div class="container basic svelte-zsvi39"><div class="fact svelte-zsvi39" style="border-right: 4px solid white;"><span class="title svelte-zsvi39" data-svelte-h="svelte-11lpxx1"><p class="svelte-zsvi39">Name</p></span> <p style="width: 100%; text-align: center;"><span slot="name" data-svelte-h="svelte-t8mq2y">Amp</span></p></div> <div class="fact svelte-zsvi39"><span class="title svelte-zsvi39" data-svelte-h="svelte-1r6we22"><p class="svelte-zsvi39">Role</p></span> <p style="width: 100%; text-align: center;"><span slot="role" data-svelte-h="svelte-dr6umr">Demon, Nonhuman, Reforming Persecutor</span></p></div></div> <div class="container basic-two svelte-zsvi39"><div class="fact svelte-zsvi39" style="border-right: 4px solid white;"><span class="title svelte-zsvi39" data-svelte-h="svelte-1b83z5l"><p class="svelte-zsvi39">Age</p></span> <p style="width: 100%; text-align: center;"><span slot="age">21</span></p></div> <div class="fact svelte-zsvi39" style="border-right: 4px solid white;"><span class="title svelte-zsvi39" data-svelte-h="svelte-lhrs6b"><p class="svelte-zsvi39">Gender</p></span> <p style="width: 100%; text-align: center;"><span slot="gender" data-svelte-h="svelte-cugvdn">-</span></p></div> <div class="fact svelte-zsvi39"><span class="title svelte-zsvi39" data-svelte-h="svelte-32b5g2"><p class="svelte-zsvi39">Sexuality</p></span> <p style="width: 100%; text-align: center;"><span slot="sexuality" data-svelte-h="svelte-1oca8n2">-</span></p></div></div> <div class="container basic-two svelte-zsvi39"><div class="fact svelte-zsvi39" style="border-right: 4px solid white;"><span class="title svelte-zsvi39" data-svelte-h="svelte-1b7js59"><p class="svelte-zsvi39">Color</p></span> <span slot="color" data-svelte-h="svelte-z5jx30"><div class="color" style="background-color: green"></div></span></div> <div class="fact svelte-zsvi39" style="border-right: 4px solid white;"><span class="title svelte-zsvi39" data-svelte-h="svelte-rwh243"><p class="svelte-zsvi39">Song</p></span> <p style="width: 100%; text-align: center;"><span slot="song" data-svelte-h="svelte-1yzumfq">Starboy - The Weeknd</span></p></div> <div class="fact svelte-zsvi39"><span class="title svelte-zsvi39" data-svelte-h="svelte-sytfha"><p class="svelte-zsvi39">Food</p></span> <p style="width: 100%; text-align: center;"><span slot="food" data-svelte-h="svelte-kldoje">-</span></p></div></div> <div class="description svelte-zsvi39"><p class="description-title svelte-zsvi39" data-svelte-h="svelte-1ffp0ht">About Me</p> <p class="explain svelte-zsvi39"><span slot="description" data-svelte-h="svelte-1uty7tv">Yes sir eee Satan in me. I have historically been the most dangerous alter. It turns out there were other (number) alters influencing me;
+		<div style="display: contents">  <a href="/" class="go-back svelte-1udvpdc" data-svelte-h="svelte-1x5b5lw"><p class="svelte-1udvpdc">⬅</p></a> <div class="container outer svelte-1udvpdc"><div class="container image svelte-1udvpdc"><span slot="image" data-svelte-h="svelte-1kofsoh"><img src="/amp.jpg"></span></div> <div class="container info svelte-1udvpdc"><div class="container basic svelte-1udvpdc"><div class="fact svelte-1udvpdc" style="border-right: 4px solid white;"><span class="title svelte-1udvpdc" data-svelte-h="svelte-11lpxx1"><p class="svelte-1udvpdc">Name</p></span> <p style="width: 100%; text-align: center;"><span slot="name" data-svelte-h="svelte-t8mq2y">Amp</span></p></div> <div class="fact svelte-1udvpdc"><span class="title svelte-1udvpdc" data-svelte-h="svelte-1r6we22"><p class="svelte-1udvpdc">Role</p></span> <p style="width: 100%; text-align: center;"><span slot="role" data-svelte-h="svelte-dr6umr">Demon, Nonhuman, Reforming Persecutor</span></p></div></div> <div class="container basic-two svelte-1udvpdc"><div class="fact svelte-1udvpdc" style="border-right: 4px solid white;"><span class="title svelte-1udvpdc" data-svelte-h="svelte-1b83z5l"><p class="svelte-1udvpdc">Age</p></span> <p style="width: 100%; text-align: center;"><span slot="age">21</span></p></div> <div class="fact svelte-1udvpdc" style="border-right: 4px solid white;"><span class="title svelte-1udvpdc" data-svelte-h="svelte-lhrs6b"><p class="svelte-1udvpdc">Gender</p></span> <p style="width: 100%; text-align: center;"><span slot="gender" data-svelte-h="svelte-cugvdn">-</span></p></div> <div class="fact svelte-1udvpdc"><span class="title svelte-1udvpdc" data-svelte-h="svelte-32b5g2"><p class="svelte-1udvpdc">Sexuality</p></span> <p style="width: 100%; text-align: center;"><span slot="sexuality" data-svelte-h="svelte-1oca8n2">-</span></p></div></div> <div class="container basic-two svelte-1udvpdc"><div class="fact svelte-1udvpdc" style="border-right: 4px solid white;"><span class="title svelte-1udvpdc" data-svelte-h="svelte-1b7js59"><p class="svelte-1udvpdc">Color</p></span> <span slot="color" data-svelte-h="svelte-z5jx30"><div class="color" style="background-color: green"></div></span></div> <div class="fact svelte-1udvpdc" style="border-right: 4px solid white;"><span class="title svelte-1udvpdc" data-svelte-h="svelte-rwh243"><p class="svelte-1udvpdc">Song</p></span> <p style="width: 100%; text-align: center;"><span slot="song" data-svelte-h="svelte-1yzumfq">Starboy - The Weeknd</span></p></div> <div class="fact svelte-1udvpdc"><span class="title svelte-1udvpdc" data-svelte-h="svelte-sytfha"><p class="svelte-1udvpdc">Food</p></span> <p style="width: 100%; text-align: center;"><span slot="food" data-svelte-h="svelte-kldoje">-</span></p></div></div> <div class="description svelte-1udvpdc"><p class="description-title svelte-1udvpdc" data-svelte-h="svelte-1ffp0ht">About Me</p> <p class="explain svelte-1udvpdc"><span slot="description" data-svelte-h="svelte-1uty7tv">Yes sir eee Satan in me. I have historically been the most dangerous alter. It turns out there were other (number) alters influencing me;
         pulling the strings like puppeteers in the background. I forget that the body is human, I think I can achieve anything; I can access all three
         subsystems, although my home subsystem is with Aurora and the speculated alter Abyss. Due to my baseline grandiosity and feelings of invincibility,
         my sensitivity to manic tendencies is Amplified compared to other alters.</span></p></div></div> </div> 
 			
 			<script>
 				{
-					__sveltekit_5in08n = {
+					__sveltekit_1mpchrs = {
 						base: "",
 						env: {}
 					};
@@ -51,8 +51,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("/_app/immutable/entry/start.269d6dc9.js"),
-						import("/_app/immutable/entry/app.917926fb.js")
+						import("/_app/immutable/entry/start.5b449d44.js"),
+						import("/_app/immutable/entry/app.185df82c.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
