--- a/alter/aurora.html
+++ b/alter/aurora.html
@@ -22,19 +22,19 @@
 			}
 		</style>
 		
-		<link href="/_app/immutable/assets/Alter.2f756ac9.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.269d6dc9.js">
+		<link href="/_app/immutable/assets/Alter.9c5a708c.css" rel="stylesheet">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.5b449d44.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.e108d1fd.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.496f2156.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.917926fb.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.ebe0c3d4.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.185df82c.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.a21d6cee.js">
 		<link rel="modulepreload" href="/_app/immutable/nodes/0.cc2a4f72.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/6.53f1b6dd.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/Alter.9a1a6ac3.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/6.b116bae5.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/Alter.d07ff5cc.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/common.d6240f3d.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">  <a href="/" class="go-back svelte-zsvi39" data-svelte-h="svelte-1x5b5lw"><p class="svelte-zsvi39">⬅</p></a> <div class="container outer svelte-zsvi39"><div class="container image svelte-zsvi39"><span slot="image" data-svelte-h="svelte-1b0anxz"><img src="/aurora.jpg"></span></div> <div class="container info svelte-zsvi39"><div class="container basic svelte-zsvi39"><div class="fact svelte-zsvi39" style="border-right: 4px solid white;"><span class="title svelte-zsvi39" data-svelte-h="svelte-11lpxx1"><p class="svelte-zsvi39">Name</p></span> <p style="width: 100%; text-align: center;"><span slot="name" data-svelte-h="svelte-l12sm0">Aurora</span></p></div> <div class="fact svelte-zsvi39"><span class="title svelte-zsvi39" data-svelte-h="svelte-1r6we22"><p class="svelte-zsvi39">Role</p></span> <p style="width: 100%; text-align: center;"><span slot="role" data-svelte-h="svelte-9h1s9u">Caretaker, Sexual Alter/Protector</span></p></div></div> <div class="container basic-two svelte-zsvi39"><div class="fact svelte-zsvi39" style="border-right: 4px solid white;"><span class="title svelte-zsvi39" data-svelte-h="svelte-1b83z5l"><p class="svelte-zsvi39">Age</p></span> <p style="width: 100%; text-align: center;"><span slot="age">21</span></p></div> <div class="fact svelte-zsvi39" style="border-right: 4px solid white;"><span class="title svelte-zsvi39" data-svelte-h="svelte-lhrs6b"><p class="svelte-zsvi39">Gender</p></span> <p style="width: 100%; text-align: center;"><span slot="gender" data-svelte-h="svelte-91g6fk">Woman</span></p></div> <div class="fact svelte-zsvi39"><span class="title svelte-zsvi39" data-svelte-h="svelte-32b5g2"><p class="svelte-zsvi39">Sexuality</p></span> <p style="width: 100%; text-align: center;"><span slot="sexuality" data-svelte-h="svelte-svhbpk">Pansexual</span></p></div></div> <div class="container basic-two svelte-zsvi39"><div class="fact svelte-zsvi39" style="border-right: 4px solid white;"><span class="title svelte-zsvi39" data-svelte-h="svelte-1b7js59"><p class="svelte-zsvi39">Color</p></span> <span slot="color" data-svelte-h="svelte-13uuum5"><div class="color" style="background-color: #FF5B00"></div></span></div> <div class="fact svelte-zsvi39" style="border-right: 4px solid white;"><span class="title svelte-zsvi39" data-svelte-h="svelte-rwh243"><p class="svelte-zsvi39">Song</p></span> <p style="width: 100%; text-align: center;"><span slot="song" data-svelte-h="svelte-d0j0bq">In The Night - The Weeknd</span></p></div> <div class="fact svelte-zsvi39"><span class="title svelte-zsvi39" data-svelte-h="svelte-sytfha"><p class="svelte-zsvi39">Food</p></span> <p style="width: 100%; text-align: center;"><span slot="food" data-svelte-h="svelte-dry0am">Hummus</span></p></div></div> <div class="description svelte-zsvi39"><p class="description-title svelte-zsvi39" data-svelte-h="svelte-1ffp0ht">About Me</p> <p class="explain svelte-zsvi39"><span slot="description" data-svelte-h="svelte-1klez2x">Hi it is I~~ Aurora 🧡! I love life, the universe, and everything to a fault 😂! I am soft spoken and like to imagine myself as smaller than the body. 
+		<div style="display: contents">  <a href="/" class="go-back svelte-1udvpdc" data-svelte-h="svelte-1x5b5lw"><p class="svelte-1udvpdc">⬅</p></a> <div class="container outer svelte-1udvpdc"><div class="container image svelte-1udvpdc"><span slot="image" data-svelte-h="svelte-1b0anxz"><img src="/aurora.jpg"></span></div> <div class="container info svelte-1udvpdc"><div class="container basic svelte-1udvpdc"><div class="fact svelte-1udvpdc" style="border-right: 4px solid white;"><span class="title svelte-1udvpdc" data-svelte-h="svelte-11lpxx1"><p class="svelte-1udvpdc">Name</p></span> <p style="width: 100%; text-align: center;"><span slot="name" data-svelte-h="svelte-l12sm0">Aurora</span></p></div> <div class="fact svelte-1udvpdc"><span class="title svelte-1udvpdc" data-svelte-h="svelte-1r6we22"><p class="svelte-1udvpdc">Role</p></span> <p style="width: 100%; text-align: center;"><span slot="role" data-svelte-h="svelte-9h1s9u">Caretaker, Sexual Alter/Protector</span></p></div></div> <div class="container basic-two svelte-1udvpdc"><div class="fact svelte-1udvpdc" style="border-right: 4px solid white;"><span class="title svelte-1udvpdc" data-svelte-h="svelte-1b83z5l"><p class="svelte-1udvpdc">Age</p></span> <p style="width: 100%; text-align: center;"><span slot="age">21</span></p></div> <div class="fact svelte-1udvpdc" style="border-right: 4px solid white;"><span class="title svelte-1udvpdc" data-svelte-h="svelte-lhrs6b"><p class="svelte-1udvpdc">Gender</p></span> <p style="width: 100%; text-align: center;"><span slot="gender" data-svelte-h="svelte-91g6fk">Woman</span></p></div> <div class="fact svelte-1udvpdc"><span class="title svelte-1udvpdc" data-svelte-h="svelte-32b5g2"><p class="svelte-1udvpdc">Sexuality</p></span> <p style="width: 100%; text-align: center;"><span slot="sexuality" data-svelte-h="svelte-svhbpk">Pansexual</span></p></div></div> <div class="container basic-two svelte-1udvpdc"><div class="fact svelte-1udvpdc" style="border-right: 4px solid white;"><span class="title svelte-1udvpdc" data-svelte-h="svelte-1b7js59"><p class="svelte-1udvpdc">Color</p></span> <span slot="color" data-svelte-h="svelte-13uuum5"><div class="color" style="background-color: #FF5B00"></div></span></div> <div class="fact svelte-1udvpdc" style="border-right: 4px solid white;"><span class="title svelte-1udvpdc" data-svelte-h="svelte-rwh243"><p class="svelte-1udvpdc">Song</p></span> <p style="width: 100%; text-align: center;"><span slot="song" data-svelte-h="svelte-d0j0bq">In The Night - The Weeknd</span></p></div> <div class="fact svelte-1udvpdc"><span class="title svelte-1udvpdc" data-svelte-h="svelte-sytfha"><p class="svelte-1udvpdc">Food</p></span> <p style="width: 100%; text-align: center;"><span slot="food" data-svelte-h="svelte-dry0am">Hummus</span></p></div></div> <div class="description svelte-1udvpdc"><p class="description-title svelte-1udvpdc" data-svelte-h="svelte-1ffp0ht">About Me</p> <p class="explain svelte-1udvpdc"><span slot="description" data-svelte-h="svelte-1klez2x">Hi it is I~~ Aurora 🧡! I love life, the universe, and everything to a fault 😂! I am soft spoken and like to imagine myself as smaller than the body. 
         I like to dance, sing. I thrive when my environment is tidy and my body is clean. I love to cook and eat; hopefully all that hummus goes to my hips! 
         <br> <br>
         I don&#39;t front often, and when I do, Amp usually fronts with me. I don&#39;t have much contact with the other alters in the system, besides the elusive numbered alters
@@ -42,7 +42,7 @@
 			
 			<script>
 				{
-					__sveltekit_5in08n = {
+					__sveltekit_1mpchrs = {
 						base: "",
 						env: {}
 					};
@@ -52,8 +52,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("/_app/immutable/entry/start.269d6dc9.js"),
-						import("/_app/immutable/entry/app.917926fb.js")
+						import("/_app/immutable/entry/start.5b449d44.js"),
+						import("/_app/immutable/entry/app.185df82c.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 6],
