--- a/alter/colby.html
+++ b/alter/colby.html
@@ -22,22 +22,22 @@
 			}
 		</style>
 		
-		<link href="/_app/immutable/assets/Alter.9c5a708c.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.5b449d44.js">
+		<link href="/_app/immutable/assets/Alter.5f43590a.css" rel="stylesheet">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.c3554ea5.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.e108d1fd.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.ebe0c3d4.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.185df82c.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.f091bb9b.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.5a9a0a30.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.a21d6cee.js">
 		<link rel="modulepreload" href="/_app/immutable/nodes/0.cc2a4f72.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/7.ffae5999.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/Alter.d07ff5cc.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/7.717f834f.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/Alter.98716ee0.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">  <a href="/" class="go-back svelte-1udvpdc" data-svelte-h="svelte-1x5b5lw"><p class="svelte-1udvpdc">⬅</p></a> <div class="container outer svelte-1udvpdc"><div class="container image svelte-1udvpdc"><span slot="image"></span></div> <div class="container info svelte-1udvpdc"><div class="container basic svelte-1udvpdc"><div class="fact svelte-1udvpdc" style="border-right: 4px solid white;"><span class="title svelte-1udvpdc" data-svelte-h="svelte-11lpxx1"><p class="svelte-1udvpdc">Name</p></span> <p style="width: 100%; text-align: center;"><span slot="name" data-svelte-h="svelte-o2cmrp">Colby</span></p></div> <div class="fact svelte-1udvpdc"><span class="title svelte-1udvpdc" data-svelte-h="svelte-1r6we22"><p class="svelte-1udvpdc">Role</p></span> <p style="width: 100%; text-align: center;"><span slot="role" data-svelte-h="svelte-1kqvisz">Core?, Little, Trauma Holder</span></p></div></div> <div class="container basic-two svelte-1udvpdc"><div class="fact svelte-1udvpdc" style="border-right: 4px solid white;"><span class="title svelte-1udvpdc" data-svelte-h="svelte-1b83z5l"><p class="svelte-1udvpdc">Age</p></span> <p style="width: 100%; text-align: center;"><span slot="age" data-svelte-h="svelte-6yc8dt">10</span></p></div> <div class="fact svelte-1udvpdc" style="border-right: 4px solid white;"><span class="title svelte-1udvpdc" data-svelte-h="svelte-lhrs6b"><p class="svelte-1udvpdc">Gender</p></span> <p style="width: 100%; text-align: center;"><span slot="gender" data-svelte-h="svelte-1xvcx6k">Boy</span></p></div> <div class="fact svelte-1udvpdc"><span class="title svelte-1udvpdc" data-svelte-h="svelte-32b5g2"><p class="svelte-1udvpdc">Sexuality</p></span> <p style="width: 100%; text-align: center;"><span slot="sexuality" data-svelte-h="svelte-mqhpqw">Nonsexual</span></p></div></div> <div class="container basic-two svelte-1udvpdc"><div class="fact svelte-1udvpdc" style="border-right: 4px solid white;"><span class="title svelte-1udvpdc" data-svelte-h="svelte-1b7js59"><p class="svelte-1udvpdc">Color</p></span> <span slot="color" data-svelte-h="svelte-forio3"><div class="color" style="background-color: yellow"></div></span></div> <div class="fact svelte-1udvpdc" style="border-right: 4px solid white;"><span class="title svelte-1udvpdc" data-svelte-h="svelte-rwh243"><p class="svelte-1udvpdc">Song</p></span> <p style="width: 100%; text-align: center;"><span slot="song" data-svelte-h="svelte-tmfebv">-</span></p></div> <div class="fact svelte-1udvpdc"><span class="title svelte-1udvpdc" data-svelte-h="svelte-sytfha"><p class="svelte-1udvpdc">Food</p></span> <p style="width: 100%; text-align: center;"><span slot="food" data-svelte-h="svelte-37tl31">Chicago-style Pizza</span></p></div></div> <div class="description svelte-1udvpdc"><p class="description-title svelte-1udvpdc" data-svelte-h="svelte-1ffp0ht">About Me</p> <p class="explain svelte-1udvpdc"><span slot="description" data-svelte-h="svelte-14lvhh0">TODO when Colby fronts</span></p></div></div> </div> 
+		<div style="display: contents">  <a href="/" class="go-back svelte-1wbcl0j" data-svelte-h="svelte-k8hnu"><img src="/back-arrow.png" class="svelte-1wbcl0j"></a> <div class="container outer svelte-1wbcl0j"><div class="container image svelte-1wbcl0j"><span slot="image"></span></div> <div class="container info svelte-1wbcl0j"><div class="container basic svelte-1wbcl0j"><div class="fact svelte-1wbcl0j" style="border-right: 4px solid white;"><span class="title svelte-1wbcl0j" data-svelte-h="svelte-11lpxx1"><p class="svelte-1wbcl0j">Name</p></span> <p style="width: 100%; text-align: center;"><span slot="name" data-svelte-h="svelte-o2cmrp">Colby</span></p></div> <div class="fact svelte-1wbcl0j"><span class="title svelte-1wbcl0j" data-svelte-h="svelte-1r6we22"><p class="svelte-1wbcl0j">Role</p></span> <p style="width: 100%; text-align: center;"><span slot="role" data-svelte-h="svelte-1kqvisz">Core?, Little, Trauma Holder</span></p></div></div> <div class="container basic-two svelte-1wbcl0j"><div class="fact svelte-1wbcl0j" style="border-right: 4px solid white;"><span class="title svelte-1wbcl0j" data-svelte-h="svelte-1b83z5l"><p class="svelte-1wbcl0j">Age</p></span> <p style="width: 100%; text-align: center;"><span slot="age" data-svelte-h="svelte-6yc8dt">10</span></p></div> <div class="fact svelte-1wbcl0j" style="border-right: 4px solid white;"><span class="title svelte-1wbcl0j" data-svelte-h="svelte-lhrs6b"><p class="svelte-1wbcl0j">Gender</p></span> <p style="width: 100%; text-align: center;"><span slot="gender" data-svelte-h="svelte-1xvcx6k">Boy</span></p></div> <div class="fact svelte-1wbcl0j"><span class="title svelte-1wbcl0j" data-svelte-h="svelte-32b5g2"><p class="svelte-1wbcl0j">Sexuality</p></span> <p style="width: 100%; text-align: center;"><span slot="sexuality" data-svelte-h="svelte-mqhpqw">Nonsexual</span></p></div></div> <div class="container basic-two svelte-1wbcl0j"><div class="fact svelte-1wbcl0j" style="border-right: 4px solid white;"><span class="title svelte-1wbcl0j" data-svelte-h="svelte-1b7js59"><p class="svelte-1wbcl0j">Color</p></span> <span slot="color" data-svelte-h="svelte-forio3"><div class="color" style="background-color: yellow"></div></span></div> <div class="fact svelte-1wbcl0j" style="border-right: 4px solid white;"><span class="title svelte-1wbcl0j" data-svelte-h="svelte-rwh243"><p class="svelte-1wbcl0j">Song</p></span> <p style="width: 100%; text-align: center;"><span slot="song" data-svelte-h="svelte-tmfebv">-</span></p></div> <div class="fact svelte-1wbcl0j"><span class="title svelte-1wbcl0j" data-svelte-h="svelte-sytfha"><p class="svelte-1wbcl0j">Food</p></span> <p style="width: 100%; text-align: center;"><span slot="food" data-svelte-h="svelte-37tl31">Chicago-style Pizza</span></p></div></div> <div class="description svelte-1wbcl0j"><p class="description-title svelte-1wbcl0j" data-svelte-h="svelte-1ffp0ht">About Me</p> <p class="explain svelte-1wbcl0j"><span slot="description" data-svelte-h="svelte-14lvhh0">TODO when Colby fronts</span></p></div></div> </div> 
 			
 			<script>
 				{
-					__sveltekit_1mpchrs = {
+					__sveltekit_1s9yyi8 = {
 						base: "",
 						env: {}
 					};
@@ -47,8 +47,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("/_app/immutable/entry/start.5b449d44.js"),
-						import("/_app/immutable/entry/app.185df82c.js")
+						import("/_app/immutable/entry/start.c3554ea5.js"),
+						import("/_app/immutable/entry/app.5a9a0a30.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 7],
