--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 		</style>
 		
 		<link href="/_app/immutable/assets/2.09dd8c8d.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.86c93d84.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.48765475.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.e108d1fd.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.fe67dafe.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.448daf51.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.43079671.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.f7503b7c.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.a21d6cee.js">
 		<link rel="modulepreload" href="/_app/immutable/nodes/0.cc2a4f72.js">
 		<link rel="modulepreload" href="/_app/immutable/nodes/2.add0d290.js">
@@ -36,7 +36,7 @@
 			
 			<script>
 				{
-					__sveltekit_5dv20p = {
+					__sveltekit_q082eq = {
 						base: "",
 						env: {}
 					};
@@ -46,8 +46,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("/_app/immutable/entry/start.86c93d84.js"),
-						import("/_app/immutable/entry/app.448daf51.js")
+						import("/_app/immutable/entry/start.48765475.js"),
+						import("/_app/immutable/entry/app.f7503b7c.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
